# schema_analysis

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.agents/skills/schema-analysis/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish-node.yml  publish-python.yml  publish-rust.yml  publish-web.yml
schema_analysis/: Cargo.toml  README.md
schema_analysis/src/: helpers.rs  lib.rs  main.rs  schema.rs  traits.rs
schema_analysis/src/analysis/: field.rs  mod.rs  schema.rs  schema_seed.rs
schema_analysis/src/context/: aggregators.rs  boolean.rs  bytes.rs  map_struct.rs  mod.rs  null.rs  number.rs  sequence.rs  shared.rs  string.rs
schema_analysis/src/targets/: json_typegen.rs  mod.rs  schemars.rs
schema_analysis/tests/: cli.rs  source_bson.rs  source_cbor.rs  source_json.rs  source_toml.rs  source_xml.rs  source_yaml.rs  target_json_schema_json_typegen.rs  target_json_schema_schemars.rs  target_json_typegen_shape.rs
schema_analysis/tests/cli_fixtures/expected/: json_json_schema.json  json_merged_schema.json  json_rust.rs  json_schema_compact.json  json_schema_no_analysis.json  json_typescript.ts  stdin_json_schema.json  toml_schema.json  xml_schema.json
schema_analysis/tests/cli_fixtures/input/: sample.json  sample.toml  sample.xml  sample.yaml  sample2.json
schema_analysis/tests/shared/: mod.rs
schema_analysis/tests/test_files/: config.toml  medium.csv  medium.json  medium.ndjson  small.json  small.xml  small.yaml  tiny.json
schema_analysis/tests/test_files/many/: user_000.json  user_001.json  user_002.json  user_003.json  user_004.json  user_005.json  user_006.json  user_007.json  user_008.json  user_009.json  user_010.json  user_011.json  user_012.json  user_013.json  user_014.json  user_015.json  user_016.json  user_017.json  user_018.json  user_019.json  user_020.json  user_021.json  user_022.json  user_023.json  user_024.json  user_025.json  user_026.json  user_027.json  user_028.json  user_029.json  user_030.json  user_031.json  user_032.json  user_033.json  user_034.json  user_035.json  user_036.json  user_037.json  user_038.json  user_039.json  (+60 more)
web/: Cargo.toml  Trunk.toml  index.html  index.scss
web/assets/: manifest.json
web/src/: lib.rs  util.rs
web/src/app/: app.rs  app.scss  element_ext.rs  main.rs  web_sys_events_ext.rs
web/src/app/components/: _picker-base.scss  file_list.rs  file_list.scss  file_modal.rs  file_modal.scss  file_upload.rs  file_upload.scss  format_picker.rs  format_picker.scss  mod.rs  output_picker.rs  output_picker.scss  output_view.rs  output_view.scss
web/src/worker/: main.rs
web/web_worker/: Cargo.toml
web/web_worker/src/: lib.rs  oneshot.rs
website/: README.md  config-overrides.js  package.json
website/public/: index.html  manifest.json  test.json
website/schema_analysis_wasm/: Cargo.toml
website/schema_analysis_wasm/src/: lib.rs
website/src/: App.tsx  custom.d.ts  definitions.ts  index.css  index.tsx  service-worker.ts  utilities.ts
website/src/Components/: Display.tsx  Intro.tsx  Result.tsx
website/src/Workers/: README.md  processing.worker.ts  useWorker.ts
